# minolab

./: .gitignore  README.md  dm_test.py  main.py  pyproject.toml  test.py
core/entities/: image_data.py
core/repositories/: image_repository.py
core/use_cases/: average_hole_diameter_calculation.py  crystal_detection.py  image_conversion.py  image_processing.py  tomography.py
domain/config/: category_types.py  frequency_processing_types.py  processing_types.py  spatial_processing_types.py
domain/entities/: image_data.py
domain/repositories/: image_repository.py  image_repository_interface.py
domain/services/: fast_fourier_transform.py  image_processing_helpers.py  processing_registry.py
domain/services/frequency_processing/: frequency_filters.py  frequency_processing_interface.py  peak_detector.py
domain/services/spatial_processing/: binarizations.py  edge_detectors.py  line_detectors.py  spatial_filters.py  spatial_processing_interface.py  spatial_processing_registry.py
domain/use_cases/: apply_frequency_processing.py  apply_spatial_processing.py  average_hole_diameter_calculation.py  crystal_detection.py  image_conversion.py  image_processing.py  image_processor.py  tomography.py
domain/utilities/: image_converters.py  pixel_counter.py
infrastructure/: image_reader.py  image_writer.py
infrastructure/repositories/: file_image_repository.py
interface/: gui.py
